force-app/main/default/objects/SLA_Status_Config__mdt/SLA_Status_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuracao de status de Task considerados fechados/cancelados.</description>
    <label>SLA Status Config</label>
    <pluralLabel>SLA Status Configs</pluralLabel>
</CustomObject>