force-app/main/default/objects/SLA_Status_Config__mdt/fields/IsCanceled__c.field-meta.xml
<CustomField>
    <fullName>IsCanceled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o status conta como cancelado.</description>
    <label>Is Canceled</label>
    <type>Checkbox</type>
</CustomField>