force-app/main/default/objects/SLA_Status_Config__mdt/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o status conta como fechado.</description>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>