force-app/main/default/objects/SLA_Status_Config__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Valor do Status da Task.</description>
    <label>Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>